--- a/C0745078-week3/index.html
+++ b/C0745078-week3/index.html
@@ -6,7 +6,7 @@
     <link href="css/default.css" rel="stylesheet" />
 </head>
 <body>
-    <div>Content goes here!</div>
+    <div>Hai my name is jestin!</div>
     <script src="js/main.js"></script>
 </body>
 </html>
